--- a/structural-equation-models.qmd
+++ b/structural-equation-models.qmd
@@ -5,3 +5,19 @@ title: "Structural Equation Models"
 For an overview of structural equation modeling, see my chapter on "[Structural Equation Modeling](https://isaactpetersen.github.io/Principles-Psychological-Assessment/structural-equation-modeling.html)" in the following textbook:
 
 Petersen, I. T. (2025). *Principles of psychological assessment: With applied examples in R*. University of Iowa Libraries. <https://isaactpetersen.github.io/Principles-Psychological-Assessment>. <https://doi.org/10.25820/work.007199>
+
+# Preamble
+
+## Load Libraries
+
+## Load Data
+
+# Latent Growth Curve Model
+
+# Latent Change Score Model
+
+# Cross-Lagged Panel Model
+
+# Random-Intercepts Cross-Lagged Panel Model
+
+# Longitudinal Measurement Invariance
