--- a/simulate-data.qmd
+++ b/simulate-data.qmd
@@ -30,11 +30,11 @@ n_time <- length(ages)
 
 # Participant-level info
 id <- 1:N
-sex <- rbinom(N, 1, 0.5)  # 0=female, 1=male
+sexMale <- rbinom(N, 1, 0.5)  # 0=female, 1=male
 
 df <- expand.grid(ID = id, age = ages) %>%
   arrange(ID, age) %>%
-  mutate(sex = rep(sex, each = n_time))
+  mutate(sexMale = rep(sexMale, each = n_time))
 
 # -----------------------------
 # 2. Random intercepts (person-level)
@@ -126,14 +126,14 @@ for (i in unique(df$ID)) {
 
       df$depression_latent[row] <-
         df$u_dep[row] +
-        beta_sex_dep * df$sex[row] +
+        beta_sex_dep * df$sexMale[row] +
         beta_ses_dep * df$ses[row] +
         beta_sleep_dep * df$sleep[row] +
         df$e_dep[row]
 
       df$anxiety_latent[row] <-
         df$u_anx[row] +
-        beta_sex_anx * df$sex[row] +
+        beta_sex_anx * df$sexMale[row] +
         beta_ses_anx * df$ses[row] +
         beta_sleep_anx * df$sleep[row] +
         df$e_anx[row]
@@ -146,8 +146,8 @@ for (i in unique(df$ID)) {
         df$u_dep[row] +
         phi_dep * df$depression_latent[prev] +
         cl_anx_to_dep * df$anxiety_latent[prev] +
-        (beta_age_dep + beta_age_sex_dep * df$sex[row]) * (df$age[row] - 14) +
-        beta_sex_dep * df$sex[row] +
+        (beta_age_dep + beta_age_sex_dep * df$sexMale[row]) * (df$age[row] - 14) +
+        beta_sex_dep * df$sexMale[row] +
         beta_ses_dep * df$ses[row] +
         beta_sleep_dep * df$sleep[row] +
         df$e_dep[row]
@@ -156,8 +156,8 @@ for (i in unique(df$ID)) {
         df$u_anx[row] +
         phi_anx * df$anxiety_latent[prev] +
         cl_dep_to_anx * df$depression_latent[prev] +
-        (beta_age_anx + beta_age_sex_anx * df$sex[row]) * (df$age[row] - 14) +
-        beta_sex_anx * df$sex[row] +
+        (beta_age_anx + beta_age_sex_anx * df$sexMale[row]) * (df$age[row] - 14) +
+        beta_sex_anx * df$sexMale[row] +
         beta_ses_anx * df$ses[row] +
         beta_sleep_anx * df$sleep[row] +
         df$e_anx[row]
@@ -196,15 +196,14 @@ df <- df %>%
 # -----------------------------
 # 10. Factorize sex for plotting
 # -----------------------------
-df$sexFactor <- NA
-df$sexFactor[which(df$sex == 0)] <- "female"
-df$sexFactor[which(df$sex == 1)] <- "male"
-df$sexFactor <- factor(df$sexFactor)
+df$sex <- NA
+df$sex[which(df$sexMale == 0)] <- "female"
+df$sex[which(df$sexMale == 1)] <- "male"
 
 # -----------------------------
 # 11. Final dataset
 # -----------------------------
-df <- df %>% select(ID, age, sex, sexFactor, ses, sleep, depression, anxiety)
+df <- df %>% select(ID, age, sex, sexMale, ses, sleep, depression, anxiety)
 ```
 
 ## Check
@@ -246,7 +245,7 @@ hist(
 ```{r}
 # --- Summarize mean + SD by age and sex ---
 df_summary <- df %>%
-  group_by(age, sexFactor) %>%
+  group_by(age, sex) %>%
   summarize(
     mean_dep = mean(depression, na.rm=TRUE),
     sd_dep   = sd(depression, na.rm=TRUE),
@@ -257,10 +256,10 @@ df_summary <- df %>%
   )
 
 # --- Plot Depression by Age and Sex ---
-ggplot(df_summary, aes(x=age, y=mean_dep, color=sexFactor)) +
+ggplot(df_summary, aes(x=age, y=mean_dep, color=sex)) +
   geom_line(linewidth=1.2) +
   geom_point(size=2) +
-  geom_ribbon(aes(ymin=mean_dep-sd_dep, ymax=mean_dep+sd_dep, fill=sexFactor), alpha=0.2, color=NA) +
+  geom_ribbon(aes(ymin=mean_dep-sd_dep, ymax=mean_dep+sd_dep, fill=sex), alpha=0.2, color=NA) +
   labs(title="Depression Symptoms by Age and Sex",
        x="Age", y="Mean Depression Symptoms") +
   theme_minimal() +
@@ -268,10 +267,10 @@ ggplot(df_summary, aes(x=age, y=mean_dep, color=sexFactor)) +
   scale_fill_manual(values=c("female"="red", "male"="blue"))
 
 # --- Plot Anxiety by Age and Sex ---
-ggplot(df_summary, aes(x=age, y=mean_anx, color=sexFactor)) +
+ggplot(df_summary, aes(x=age, y=mean_anx, color=sex)) +
   geom_line(linewidth=1.2) +
   geom_point(size=2) +
-  geom_ribbon(aes(ymin=mean_anx-sd_anx, ymax=mean_anx+sd_anx, fill=sexFactor), alpha=0.2, color=NA) +
+  geom_ribbon(aes(ymin=mean_anx-sd_anx, ymax=mean_anx+sd_anx, fill=sex), alpha=0.2, color=NA) +
   labs(title="Anxiety Symptoms by Age and Sex",
        x="Age", y="Mean Anxiety Symptoms") +
   theme_minimal() +
